# fornax

./: .gitignore  AGENTS.md  PROJECT.md  README.md  distribution.json  gemini-extension.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.githooks/: pre-commit
.github/workflows/: validate.yml
.opencode/: INSTALL.md
.opencode/plugins/: fornax.js
docs/: deployment-channels.md  host-packaging.md  identity.md  skill-types.md  skill-yaml-schema.md
scripts/: skill_graph.py  validate_skills.py
skills/assess-dependency/: SKILL.md  skill.yaml
skills/assess-knowledge/: SKILL.md  skill.yaml
skills/assess-threats/: SKILL.md  skill.yaml
skills/audit-governance/: SKILL.md  skill.yaml
skills/design-boundaries/: SKILL.md  skill.yaml
skills/diagnose-issue/: SKILL.md  skill.yaml
skills/explore-intent/: SKILL.md  skill.yaml
skills/handle-feedback/: SKILL.md  skill.yaml
skills/harden-skill/: SKILL.md  skill.yaml
skills/map-codebase/: SKILL.md  skill.yaml
skills/orient-repo/: SKILL.md  skill.yaml
skills/plan-implementation/: SKILL.md  skill.yaml
skills/plan-migration/: SKILL.md  skill.yaml
skills/plan-repo-extract/: SKILL.md  skill.yaml
skills/plan-split/: SKILL.md  skill.yaml
skills/plan-testing/: SKILL.md  skill.yaml
skills/resolve-deadlock/: SKILL.md  skill.yaml
skills/save-knowledge/: SKILL.md  skill.yaml
tools/fornax-cli/: README.md  pyproject.toml
tools/fornax-cli/fornax_cli/: __init__.py  cli.py
tools/fornax-cli/tests/: test_cli.py
(+28 files in other folders)
