[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fornax-cli"
dynamic = ["version"]
description = "Deploy the Fornax workspace across supported local agent hosts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tacticaldoll" }]
dependencies = [
  "agent-skill-deployer @ git+https://github.com/tacticaldoll/agent-skill-deployer.git@v0.1.0",
]

[project.scripts]
fornax = "fornax_cli.cli:main"

[tool.hatch.version]
source = "regex"
path = "../../distribution.json"
pattern = '"version"\s*:\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fornax_cli"]
